src/components/Navbar/style.css
.container {
  width: 100%;
  height: 3em;
  background-color: black;
  display: flex;
  align-items: center;
}

.menuItems {
  font-size: 20px;
  margin-right: -6rem;
  align-items: center;
}

h3 {
  font-family: 'Neucha', cursive;
  color: white;
  justify-content: start;
}

ul {
  color: white;
  list-style-type: none;
  justify-content: end;
}

